<resources>
    <string name="app_name">Trip Planner</string>

    <!--user session preference key-->
    <string name="user_session">User_Session</string>

    <!--Sign In Screen-->
    <string name="welcome">Welcome</string>
    <string name="trip_plan">Let\'s plan your trip together</string>
    <string name="classical">OR BE CLASSICAL</string>
    <string name="email_hint">E-mail address</string>
    <string name="password_hint">Password</string>
    <string name="account_new">New to Trip Planner?</string>
    <string name="sign_up">Sign Up</string>

    <!--Sign Up Screen-->
    <string name="sign_up_bg_image">Sign Up Background Image</string>
    <string name="button_close">Button Close</string>
    <string name="first_name_hint">First name</string>
    <string name="family_name_hint">Family name</string>
    <string name="get_started">Get Started</string>
    <string name="username_hint">Username</string>

    <!--Bottom navigation-->
    <string name="nav_home">Home</string>
    <string name="nav_invitations">Invitations</string>
    <string name="nav_profile">Profile</string>

    <!--create trip -->
    <string name="create_trip">CREATE YOUR TRIP</string>
    <string name="trip_title">Trip Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_create">Create Now</string>
    <string name="btn_edit">Update</string>

    <!-- User Profile-->
    <string name="cover_photo">Cover Photo</string>
    <string name="upload_dp">Upload</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="email_value">user\'s email</string>
    <string name="username_value">username</string>
    <string name="bio">Bio</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="lorems">
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
    </string>
    <string name="sign_out">Sign Out</string>

    <!-- profile bottom sheet-->
    <string name="take_a_picture">Take a picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>

    <!--trip card-->
    <string name="trip_image">Trip\'s Image</string>
    <string name="image_clock">Clock\'s Image</string>
    <string name="more_options_vert">More Options Vertical</string>
    <string name="view_Trip">View</string>
    <string name="delete_Trip">Delete</string>

    <!--view trip-->
    <string name="tab_places">Places</string>
    <string name="tab_food"><![CDATA[Food & lodges]]></string>
    <string name="tab_weather">Weather</string>
    <string name="edit_trip">Edit</string>
    <string name="no_trip">You have not created a trip yet !</string>

    <!--update profile-->
    <string name="personal_details">Personal Details</string>
    <string name="change_password">Change Password</string>
    <string name="old_password_hint">Old Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="btn_done">done</string>
    <string name="btn_change_password">Change</string>

    <!--place api -->
    <string name="place_image">Place\'s Image</string>
    <string name="place_name">Place name</string>
    <string name="show_lodges">Show Lodges</string>
    <string name="no_results">No Results !</string>
    <string name="place_search_hint">Search for a place type e.g. Park</string>

    <!--weather api-->
    <string name="weather_date">Sun, Jun 30, Today</string>
    <string name="weather_condition">Moderate temperature with patchy rainfall</string>
    <string name="temperature">21\u2103</string>
    <string name="weather_icon">Weather\'s Icon</string>
    <string name="icon_max_temp">Icon Maximum Temperature</string>
    <string name="max_temp">25</string>
    <string name="icon_min_temp">Icon Minimum Temperature</string>
    <string name="min_temp">17</string>
    <string name="icon_wind">Icon Wind</string>
    <string name="wind">Wind</string>
    <string name="wind_value">7.7 kph</string>
    <string name="icon_visibility">Icon Visibility</string>
    <string name="visibility">Visibility</string>
    <string name="icon_humidity">Icon Humidity</string>
    <string name="visibility_value">8km</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_value">73%</string>
    <string name="uv">UV</string>
    <string name="uv_value">11.3</string>
    <string name="weather_location">Bhaktapur, Nepal</string>
    <string name="icon_location">Icon Location</string>

    <!--invite friends-->
    <string name="search_for_friends_hint">Search for your friends...</string>
    <string name="invitation">Raj Shrestha has invited to Trip to somewhere</string>
    <string name="invitation_time">2 days ago</string>
    <string name="btn_decline">Decline</string>
    <string name="btn_accept">Accept</string>
    <string name="inviter_dp">Inviter\'s Display Picture</string>
    <string name="no_invitation">No Invitation Yet !</string>
    <string name="fetch_weather">Fetch Weather</string>
    <string name="accepted">Accepted</string>
    <string name="invitees">Invitees</string>
    <string name="none">None!</string>
    <string name="invitee_dp">Invitee\'s Display Picture</string>

</resources>
