<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:contentPadding="8dp">

    <com.balysv.materialripple.MaterialRippleLayout
        style="@style/Ripple"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/weather_date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/weather_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/temperature"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorInfo"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_icon"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/img_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:contentDescription="@string/icon_max_temp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/max_temp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperature"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_keyboard_arrow_up" />

            <TextView
                android:id="@+id/max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/max_temp"
                android:textColor="@color/colorDanger"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/img_min_temp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/img_max_temp"
                app:layout_constraintTop_toBottomOf="@+id/temperature"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/img_min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon_min_temp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/min_temp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/max_temp"
                app:layout_constraintTop_toBottomOf="@+id/temperature"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_keyboard_arrow_down" />

            <TextView
                android:id="@+id/min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/min_temp"
                android:textColor="@color/colorWarning"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_min_temp"
                app:layout_constraintTop_toBottomOf="@+id/temperature"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/weather_condition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/weather_condition"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_max_temp"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/img_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/icon_wind"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/img_visibility"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_condition"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_wind" />

            <TextView
                android:id="@+id/tv_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/img_wind"
                app:layout_constraintStart_toStartOf="@+id/img_wind"
                app:layout_constraintTop_toBottomOf="@+id/img_wind"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_wind_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/wind_value"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/img_wind"
                app:layout_constraintStart_toStartOf="@+id/img_wind"
                app:layout_constraintTop_toBottomOf="@+id/tv_wind"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/img_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/icon_visibility"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/img_humidity"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/img_wind"
                app:layout_constraintTop_toBottomOf="@id/weather_condition"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_visibility" />

            <TextView
                android:id="@+id/tv_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/visibility"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/img_visibility"
                app:layout_constraintStart_toStartOf="@+id/img_visibility"
                app:layout_constraintTop_toBottomOf="@+id/img_visibility"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_visibility_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/visibility_value"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/img_visibility"
                app:layout_constraintStart_toStartOf="@+id/img_visibility"
                app:layout_constraintTop_toBottomOf="@+id/tv_visibility"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/img_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/icon_humidity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/img_uv"
                app:layout_constraintStart_toEndOf="@id/img_visibility"
                app:layout_constraintTop_toBottomOf="@id/weather_condition"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_humidity" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/img_humidity"
                app:layout_constraintStart_toStartOf="@+id/img_humidity"
                app:layout_constraintTop_toBottomOf="@+id/img_humidity"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/humidity_value"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/img_humidity"
                app:layout_constraintStart_toStartOf="@+id/img_humidity"
                app:layout_constraintTop_toBottomOf="@+id/tv_humidity"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/img_uv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/icon_humidity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/img_humidity"
                app:layout_constraintTop_toBottomOf="@id/weather_condition"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_sun" />

            <TextView
                android:id="@+id/tv_uv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uv"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/img_uv"
                app:layout_constraintStart_toStartOf="@+id/img_uv"
                app:layout_constraintTop_toBottomOf="@+id/img_uv"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_uv_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/uv_value"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/img_uv"
                app:layout_constraintStart_toStartOf="@+id/img_uv"
                app:layout_constraintTop_toBottomOf="@+id/tv_uv"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.balysv.materialripple.MaterialRippleLayout>

</androidx.cardview.widget.CardView>